<resources>
    <string name="app_name">FCI E-campus</string>
    <string name="app_launcher_name">E-campus</string>
    <string name="title_activity_join_course">Join Course</string>

    <string name="title_fragment_overview">Overview</string>
    <string name="title_fragment_schedule">Schedule</string>
    <string name="title_fragment_all_tasks">All Tasks</string>
    <string name="title_fragment_my_courses">My Courses</string>
    <string name="title_fragment_announcements">Announcements</string>
    <string name="title_fragment_map">Faculty Map</string>
    <string name="title_fragment_settings">Settings</string>

    <string name="student_user_type" translatable="false">student</string>
    <string name="teacher_user_type" translatable="false">teacher</string>
    <string name="ta_user_type" translatable="false">ta</string>
    <string name="professor_user_type" translatable="false">professor</string>
    <string name="first_name_et_hint">First name</string>
    <string name="last_name_et_hint">Last name</string>
    <string name="email_et_hint">Email</string>
    <string name="mobile_number_et_hint">Mobile Number</string>
    <string name="username_et_hint">Username</string>
    <string name="password_et_hint">Password</string>
    <string name="re_enter_password_et_hint">Re-enter Password</string>
    <string name="faculty_id_et_hint">Faculty ID</string>
    <string name="date_of_birth_et_hint">Date of birth</string>
    <string name="activation_key_et_hint">Activation Key</string>

    <!-- API End Points -->
    <string name="base_url" translatable="false">http://e-campus.herokuapp.com</string>
    <string name="student_prefix" translatable="false">student</string>
    <string name="ta_prefix" translatable="false">ta</string>
    <string name="course_prefix" translatable="false">course</string>
    <string name="professor_prefix" translatable="false">professor</string>
    <string name="material_prefix" translatable="false">material</string>
    <string name="post_prefix" translatable="false">post</string>
    <string name="forum_prefix" translatable="false">forum</string>
    <string name="signup_endpoint" translatable="false">signup</string>
    <string name="login_endpoint" translatable="false">login</string>
    <string name="activate_endpoint" translatable="false">activate</string>
    <string name="change_password_endpoint" translatable="false">updatePass</string>
    <string name="show_courses_for_student_endpoint" translatable="false">showCoursesForStudent</string>
    <string name="show_courses_for_ta_endpoint" translatable="false">showCoursesForTA</string>
    <string name="show_courses_for_prof_endpoint" translatable="false">showCoursesForProf</string>
    <string name="join_course_endpoint" translatable="false">joinCourse</string>
    <string name="show_course_endpoint" translatable="false">showCourse</string>
    <string name="announcements_prefix" translatable="false">announcement</string>
    <string name="show_announcements_endpoint" translatable="false">showAnnouncements</string>
    <string name="get_all_tasks_endpoint" translatable="false">getAllTasks</string>
    <string name="show_official_materials_endpoint" translatable="false">showOfficialMaterials</string>
    <string name="show_tasks_endpoint" translatable="false">showAllTasksForSpecificCourse</string>
    <string name="add_task_endpoint" translatable="false">addTask</string>
    <string name="show_forum_endpoint" translatable="false">getAllForumPostsForSpecificCourse</string>
    <string name="post_comments_endpoint" translatable="false">showSpecificPostComments</string>
    <string name="add_comment_endpoint" translatable="false">addComment</string>
    <string name="answer_post_endpoint" translatable="false">answered</string>
    <string name="not_answer_post_endpoint" translatable="false">notAnswered</string>
    <string name="add_post_endpoint" translatable="false">addPost</string>
    <string name="show_schedule_endpoint" translatable="false">showCourseSchedule</string>
    <string name="upload_material_endpoint" translatable="false">uploadOfficialMaterials</string>
    <string name="show_student_schedule_endpoint" translatable="false">showStudentSchedule</string>
    <string name="show_prof_schedule_endpoint" translatable="false">showProfSchedule</string>
    <string name="show_ta_schedule_endpoint" translatable="false">showTASchedule</string>
    <string name="overview_endpoint" translatable="false">overview</string>
    <!-- -->

    <!-- Database constants-->
    <string name="general_major_dept_id" translatable="false">1</string>
    <string name="general_minor_dept_id" translatable="false">2</string>
    <string name="cs_dept_id" translatable="false">3</string>
    <string name="is_dept_id" translatable="false">4</string>
    <string name="it_dept_id" translatable="false">5</string>
    <string name="ds_dept_id" translatable="false">6</string>
    <string name="major_department_tv_text">Major department</string>
    <string name="minor_department_tv_text">Minor department</string>
    <!-- -->

    <!-- Auth Shared preferences -->
    <string name="authentication_shared_preference_file_name" translatable="false">authsp</string>
    <string name="saved_token_key" translatable="false">token</string>
    <string name="saved_user_type_key" translatable="false">user_type</string>
    <string name="saved_username_key" translatable="false">username</string>
    <string name="saved_password_key" translatable="false">password</string>
    <!-- -->


    <!-- Data Validation -->
    <string name="first_name_not_valid">First Name is mandatory</string>
    <string name="last_name_not_valid">Last Name is mandatory</string>
    <string name="email_not_valid">Enter a valid Email</string>
    <string name="phone_number_not_valid">Phone Number is mandatory</string>
    <string name="username_not_valid">Username is mandatory</string>
    <string name="birth_date_not_valid">Choose your birth date</string>
    <string name="faculty_id_not_valid">Faculty ID is mandatory</string>
    <string name="password_not_valid">Password should be at least 8 characters</string>
    <string name="re_password_not_valid">Password doesn\'t match Re-enter password field</string>
    <string name="course_code_not_valid">Enter Course Code</string>
    <string name="pass_code_not_valid">Enter Pass Code</string>
    <string name="group_number_not_valid">Enter Group Number</string>
    <string name="task_header_not_valid">Enter Task Name</string>
    <string name="task_description_not_valid">Enter Task Description</string>
    <string name="task_weight_not_valid">Enter Task Weight</string>
    <string name="task_date_not_valid">Enter Due Date</string>
    <string name="task_time_not_valid">Enter Due Time</string>
    <string name="post_header_not_valid">Enter Post Header</string>
    <string name="post_body_not_valid">Enter Post Body</string>
    <string name="material_header_not_valid">Enter Material Header</string>
    <string name="material_description_not_valid">Enter Material Description</string>
    <string name="material_file_not_valid">Choose File to Upload</string>
    <!-- -->

    <string name="no_internet">No Internet Connection.</string>
    <string name="action_logout_title">Logout</string>
    <string name="my_course_text_view">Your courses:</string>
    <string name="msg_no_announcements">There\'re no announcements yet!</string>
    <string name="msg_no_tasks">There\'re no tasks yet.</string>
    <string name="forum_answered">Answered</string>
    <string name="forum_not_answered">Not Answered</string>
    <string name="empty_text_my_courses_fragment">You aren\'t registered in any course</string>
    <string name="empty_text_materials_activity">No materials for this course yet</string>
    <string name="empty_text_tasks_activity">No tasks for this course yet</string>
    <string name="empty_text_forum_activity">No posts for this course yet</string>
    <string name="empty_text_schedule_activity">No schedule for this course yet</string>
    <string name="empty_comments_forum_post_activity">No comments for this post yet</string>
    <string name="empty_today_overview_activity">Seems to be free today.</string>
    <string name="empty_tomorrow_overview_activity">Seems to be free tomorrow.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="error_loading_all_tasks">Error loading tasks!</string>
    <string name="msg_empty_day">You don\'t have lectures, labs or sections.</string>
</resources>
